tests/test_assets/semantic/invalid/types/shadowed_struct_is_distinct.expected
semantic error at line 18: initializer type does not match declared type
1 semantic error generated.
